@@ -1,3 +1,10 @@
+shmuel 2025-06-22 12:51:43+03:00 - build 884
+
+1. Changes to 883:
+   - fix stack balance in win_WriteConsole
+   - don't throw error in mf.printconsole
+   - minor refactoring
+
 johnd0e 2025-06-21 15:58:44+02:00 - build 883
 
 1. LuaFAR: implement luaL_tolstring (from Lua 5.2..5.3) and make consistent use of it.
